# vessel

./: Dockerfile  README.md  env_file
license/: license.txt
readme/linux/: README.txt
readme/windows/: README.txt
scripts/: vessel.py
share/vessel/drive-model/: relative-intensities-0.txt  relative-intensities-1.txt  relative-intensities-10.txt  relative-intensities-11.txt  relative-intensities-12.txt  relative-intensities-13.txt  relative-intensities-14.txt  relative-intensities-15.txt  relative-intensities-16.txt  relative-intensities-17.txt  relative-intensities-18.txt  relative-intensities-19.txt  relative-intensities-2.txt  relative-intensities-20.txt  relative-intensities-21.txt  relative-intensities-22.txt  relative-intensities-23.txt  relative-intensities-24.txt  relative-intensities-25.txt  relative-intensities-26.txt  relative-intensities-27.txt  relative-intensities-28.txt  relative-intensities-29.txt  relative-intensities-3.txt  relative-intensities-30.txt  relative-intensities-31.txt  relative-intensities-32.txt  relative-intensities-33.txt  relative-intensities-34.txt  relative-intensities-35.txt  relative-intensities-36.txt  relative-intensities-37.txt  relative-intensities-38.txt  relative-intensities-39.txt  relative-intensities-4.txt  relative-intensities-40.txt  relative-intensities-41.txt  relative-intensities-42.txt  relative-intensities-43.txt  relative-intensities-44.txt  (+51 more)
share/vessel/stare-model/: relative-intensities-0.txt  relative-intensities-1.txt  (+89 more)
src/: .gitignore  CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/vessel/: CMakeLists.txt
src/apps/vessel/src/: RetinaApplicationFunctions.h  RetinaRegionGrowing.h  VesselApplicationFunctions.h  VesselParameterFile.cc  VesselParameterFile.h  vessel.cc
src/cmake/: FindGSL.cmake  FindMINC2.cmake  FindOpenCL.cmake
src/lib/: CMakeLists.txt
src/lib/openipDS/: CMakeLists.txt
src/lib/openipDS/openipDS/: .directory  BinaryMask2.cc  BinaryMask2.h  BinaryMask2s.cc  BinaryMask2s.h  BinaryMaskSet2.cc  BinaryMaskSet2.h  BinaryMaskSystem2.cc  BinaryMaskSystem2.h  Cache1.cc  Cache1.h  Cache2.cc  Cache2.h  Cache3.h  ColorFeatures.h  ContinuousDataSet.cc  ContinuousDataSet.h  ContinuousFeatureVector.cc  ContinuousFeatureVector.h  CoordinateTransform2.cc  CoordinateTransform2.h  CoordinateTransform3.cc  CoordinateTransform3.h  CurvedGaborFilter2.h  DataSet.h  DifferenceFeature2s.h  DigitalAlphabet.cc  DigitalAlphabet.h  DiscreteDataSet.cc  DiscreteDataSet.h  DiscreteFeatureVector.cc  DiscreteFeatureVector.h  DoubleRingFeature2s.h  Factory.h  Feature1.h  Feature2.h  Feature2Generator.h  Feature2Set.h  Feature3.h  FeatureVector.cc  (+175 more)
src/lib/openipIO/: CMakeLists.txt
src/lib/openipIO/openipIO/: ImageInfo.h  bmpIO.cc  bmpIO.h  configIO.h  floatIO.h  gifIO.h  jpgIO.cc  jpgIO.h  mincIO.cc  mincIO.h  mincIOc.c  mincIOc.h  openipIO.cc  openipIO.h  pgmIO.cc  pgmIO.h  pngIO.cc  pngIO.h  tifIO.cc  tifIO.h  videoFromImages.cc  videoFromImages.h  videoIO.cc  videoIO.h  webcamIO.cc  webcamIO.h  webcamSelectionConsoleDP.cc  webcamSelectionConsoleDP.h
src/lib/openipIO/openipIO/bmp/: EasyBMP.cc
src/lib/openipIO/openipIO/mincconfig/: config.h
src/lib/openipLL/: CMakeLists.txt
src/lib/openipLL/openipLL/: ActiveContour.cc  ActiveContour.h  ActiveContourElement.cc  ActiveContourElement.h  ActiveContourGVFGreedyAlgorithm.h  ActiveContourGreedyAlgorithm.cc  ActiveContourGreedyAlgorithm.h  AnisotropicDiffusionPeronaMalik.h  BayesMapSegmentation.h  BayesSegmentation.h  BinaryImageOperations.cc  BinaryImageOperations.h  ColorTransform2s.h  ComponentLabeling.cc  ComponentLabeling.h  ConnectingLineOperator.h  ContourRegionGrowing-original.h  ContourRegionGrowing.h  CurvedGaborBoundaryExtraction.cc  CurvedGaborBoundaryExtraction.h  CurvedGaborGraphBoundaryExtraction.cc  CurvedGaborGraphBoundaryExtraction.h  EqualSlopeAtBoundaries.h  FittingGridToPoints.h  FourierDifferenceFilter2.h  FourierFeature2.h  FourierFilter1.h  FourierFilter2.h  FourierFilterSet2.h  FourierLowPassFilter.h  FourierMatchedFilter2s.h  GaborRGLineSegmentTransform2.h  HMRFSegmentation.cc  HMRFSegmentation.h  HMRFSegmentation3.cc  HMRFSegmentation3.h  HMRFSegmentation3HexaSlice.cc  HMRFSegmentation3HexaSlice.h  HigherOrderStatistics1.h  HigherOrderStatistics2.h  (+55 more)
src/lib/openipLL/openipLL/libmd5/: md5.cc  md5.h  md5_loc.h  md5_t.cc
src/lib/openipML/: CMakeLists.txt
src/lib/openipML/openipML/: AIGraphSearch.h  AIOperator.h  AIState.h  AODEClassifier.cc  AODEClassifier.h  AdaBoostClassifier.h  AveragedKFoldCrossValidator.h  BackwardFeatureSubsetSelection.h  BaggedClassifier.h  BestFirstSearch.h  BinaryDecisionTreeNode.h  BinaryMajorityClassifier.h  BinaryTreeNode.h  BivariateFunction.h  CascadedNeuralNetworkClassifier.h  Classifier.cc  Classifier.h  ClassifierIO.h  Combinations.cc  Combinations.h  ContinuousMultivariateBayesClassifier.h  ContinuousNaiveBayesClassifier.cc  ContinuousNaiveBayesClassifier.h  CorrelationFunctions.h  DecisionTreeClassifier.cc  DecisionTreeClassifier.h  DijkstraClosedPath.cc  DijkstraClosedPath.h  DiscreteClassifier.h  DiscreteCorrelationFeatureSelection.cc  DiscreteCorrelationFeatureSelection.h  DiscreteHistogram.cc  DiscreteHistogram.h  DiscreteMultivariateBayesClassifier.h  DiscreteNaiveBayesClassifier.cc  DiscreteNaiveBayesClassifier.h  Discretizer.cc  Discretizer.h  DiscretizerIO.cc  DiscretizerIO.h  (+91 more)
src/lib/openipML/openipML/fann/: compat_time.h  fann.c  fann_io.c
src/lib/openipML/openipML/liblinear/liblinear-1.92/: predict  train
src/lib/openipML/openipML/svmlight/: svm_classify.c
src/lib/openipML/openipML/svmtorch/: ChangeLog  LICENSE.txt  Makefile  OldIOTorch.cc  OldIOTorch.h  README.txt  SVM.cc  SVMTest.cc  SVMTorch.cc  convert.cc  general.h  manual.ps
src/lib/openipSC/: CMakeLists.txt
src/lib/openipSC/openipSC/: FourierTransformer1.cc  FourierTransformer1.h  FourierTransformer2.h  RandomNumberGenerator.cc  RandomNumberGenerator.h  RealFunction.cc  RealFunction.h  distributions.cc  distributions.h  doxyfile  fourierTransform.cc  fourierTransform.h  matrixOperations.h  rootFinding.cc  rootFinding.h
