CMAKE_MINIMUM_REQUIRED(VERSION 2.0)

PROJECT(vessel)

SET(PACKAGE_NAME vessel)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../bin64)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../lib64)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -fopenmp -std=gnu++98")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
MESSAGE("-- Module path: ${CMAKE_MODULE_PATH}")

FIND_PACKAGE(GSL)
IF ( GSL_FOUND )
  MESSAGE("-- GSL library found: ${GSL_INCLUDE_DIR}; ${GSL_LIBRARIES}" )
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_GSL")
ENDIF ( GSL_FOUND )

FIND_PACKAGE(JPEG)
IF ( JPEG_FOUND )
  MESSAGE("-- JPEG library found: ${JPEG_INCLUDE_DIR}; ${JPEG_LIBRARY}" )
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_JPEG")
ENDIF ( JPEG_FOUND )

FIND_PACKAGE(TIFF)
IF ( TIFF_FOUND )
  MESSAGE("-- TIFF library found: ${TIFF_INCLUDE_DIR}; ${TIFF_LIBRARY}" )
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_TIFF")
ENDIF (	TIFF_FOUND )

FIND_PACKAGE(PNG)
IF ( PNG_FOUND )
  MESSAGE("-- PNG library found: ${PNG_INCLUDE_DIR}; ${PNG_LIBRARY}" )
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_LIBPNG")
ENDIF ( PNG_FOUND )

SET(IMAGEIO_INCLUDE_DIRS ${JPEG_INCLUDE_DIR} ${TIFF_INCLUDE_DIR} ${PNG_INCLUDE_DIR})
SET(IMAGEIO_LIBS ${JPEG_LIBRARY} ${TIFF_LIBRARY} ${PNG_LIBRARY})

SET(OPENIP_LIB_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/lib/)

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(apps)

SET(CPACK_GENERATOR, "DEB")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Vessel segmentation")
SET(CPACK_PACKAGE_NAME "vessel")
SET(CPACK_PACKAGE_VENDOR "Analytical Minds - Gyorgy Kovacs")
SET(CPACK_PACKAGE_CONTACT "gyuriofkovacs@gmail.com")
SET(CPACK_PACKAGE_VERSION_MAJOR "2016")
SET(CPACK_PACKAGE_VERSION_MINOR "11")
SET(CPACK_PACKAGE_VERSION_PATCH "18")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Gyorgy Kovacs")
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libpng12-0, libtiff5, libjpeg8, gsl-bin")
SET(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_LIST_DIR}/../license/license.txt)
SET(CPACK_NSIS_MODIFY_PATH ON)
SET(CPACK_NSIS_MENU_LINKS "share/vessel/README.txt" "README")

INCLUDE(CPack)

SET(CMAKE_VERBOSE_MAKEFILE on)
