CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PACKAGE_NAME openipLL)

#PROJECT(${PACKAGE_NAME} CXX)

INCLUDE_DIRECTORIES(${OPENIP_LIB_INCLUDE_DIR}/openipDS/
		    ${OPENIP_LIB_INCLUDE_DIR}/openipSC/
		    ${OPENIP_LIB_INCLUDE_DIR}/openipIO/
		    ${OPENIP_LIB_INCLUDE_DIR}/openipML/
		    ${OPENIP_LIB_INCLUDE_DIR}/openipLL/)

AUX_SOURCE_DIRECTORY(${PACKAGE_NAME} SRCVAR0)
AUX_SOURCE_DIRECTORY(${PACKAGE_NAME}/libmd5 SRCVAR1)

ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRCVAR0} ${SRCVAR1})

TARGET_LINK_LIBRARIES(${PACKAGE_NAME} 
			openipDS
			openipSC
			openipIO
			openipML)

INSTALL(TARGETS ${PACKAGE_NAME} 
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib)

SET(CMAKE_VERBOSE_MAKEFILE on)
