CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PACKAGE_NAME openipSC)

INCLUDE_DIRECTORIES(${OPENIP_LIB_INCLUDE_DIR}/openipSC/
		    ${GSL_INCLUDE_DIR} 
		    ${OPENIP_LIB_INCLUDE_DIR}/openipDS/)

AUX_SOURCE_DIRECTORY(${PACKAGE_NAME} SRCVAR0)

ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRCVAR0})

TARGET_LINK_LIBRARIES(${PACKAGE_NAME} 
			${GSL_LIBRARIES} 
			openipDS)

INSTALL(TARGETS ${PACKAGE_NAME} 
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib)

SET(CMAKE_VERBOSE_MAKEFILE on)
